--- a/.github/workflows/hugo.yml
+++ b/.github/workflows/hugo.yml
@@ -30,7 +30,7 @@ jobs:
   build:
     runs-on: ubuntu-latest
     env:
-      HUGO_VERSION: 'latest'
+      HUGO_VERSION: 0.108.0
     steps:
       - name: Install Hugo CLI
         run: |
