--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -97,6 +97,12 @@
     weight = 20
 
 [[sharing.providers]]
+    name = "Instagram"
+    url = "https://www.instagram.com/{url}/"
+    icon = "fab instagram"
+    weight = 25
+
+[[sharing.providers]]
     name = "Facebook"
     url = "https://www.facebook.com/sharer.php?u={url}"
     icon = "fab facebook"
@@ -210,6 +216,7 @@
     name = "Fronkon Games"
     locale = "es-ES"
     twitter = "https://x.com/fronkongames"
+    instagram = "https://www.instagram.com/fronkongames/"
     linkedIn = "https://www.linkedin.com/in/martinbr"
     github = "https://github.com/FronkonGames"
     section = "blog"
@@ -217,6 +224,7 @@
         name = "Martin Bustos"
         twitter = "https://x.com/fronkongames"
         linkedIn = "https://www.linkedin.com/in/martinbr"
+        instagram = "https://www.instagram.com/fronkongames/"
         github = "https://github.com/FronkonGames"
     [logo]
         url = "img/logo512x512.png"
