--- a/exampleSite/config/_default/languages.toml
+++ b/exampleSite/config/_default/languages.toml
@@ -6,7 +6,7 @@ weight = 1
 # toml-docs-end lang-main
 # toml-docs-start lang-param
 [en.params.head]
-tagline = "Hi! I'm Martín Bustos, a indie video game developer"
+tagline = "Hi! I'm Martín Bustos, an indie video game developer"
 [en.params.social]
 title = "Follow me"
 caption = "I work on everything coding and tweet developer memes"
