--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -97,6 +97,12 @@
     weight = 20
 
 [[sharing.providers]]
+    name = "Bluesky"
+    url = "https://bsky.app/profile/{url}.bsky.social"
+    icon = "fab bluesky"
+    weight = 22
+
+[[sharing.providers]]
     name = "Instagram"
     url = "https://www.instagram.com/{url}/"
     icon = "fab instagram"
