--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -148,7 +148,7 @@
         layout = "card"
         sort = "date"
         reverse = true
-        nested = true
+        nested = false
         cols = 3
         background = "body-tertiary"
         color = "body"
@@ -161,6 +161,7 @@
         separator = false
     [sections.projects.kairos]
         title = "Kairos"
+        layout = "card"
         sort = "date"
         reverse = true
         cols = 3
